fix: Scroll bars - disable default alignment styles

--- a/src/components/Scroll/Scroll.styl
+++ b/src/components/Scroll/Scroll.styl
@@ -148,8 +148,7 @@ $barSizeL = 9px
 
   &::before
   & .thumb
-    top 50%
-    transform translateY(-50%)
+    bottom 0
 
     .size-s > &
       height $barSizeS
@@ -166,8 +165,7 @@ $barSizeL = 9px
 
   &::before
   & .thumb
-    right 50%
-    transform translateX(50%)
+    right 0
 
     .size-s > &
       width $barSizeS
